# human-cognome-project

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFESTO.md  README.md  ROADMAP.md  TODO.md  co.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: agent-suitable.md  good-first-issue.md
contrib/haven/: README.md  entity_registry.py  memory_hcp.py  memory_to_hcp.py  session_to_pbm.py
data/: hcp_pbms.db
data/gutenberg/: metadata.json  metadata_batch2.json
data/vocab.lmdb/: data.mdb
db/: AGENTS.md  ROADMAP.md  TODO.md  core.sql  core.sql.gz.sha256  english.sql  english.sql.gz.sha256  fic_entities.sql  fic_entities.sql.gz.sha256  fic_pbm.sql  hcp_en_pbm_schema.sql  hcp_fic_pbm.sql  hcp_fic_pbm.sql.gz.sha256  hcp_nf_entities.sql  hcp_nf_entities.sql.gz.sha256  load.sh  migrate_core_to_five_column.sql  migrate_english_to_five_column.sql  migrate_names_to_five_column.sql  migrate_pbm_to_five_column.sql  migrate_to_atomic_tokens.sql  migrate_to_five_column_tokens.sql  names.sql  nf_entities.sql  pbm_store.sql  run_all_migrations.sh  spacing_rules.sql  var.sql  var.sql.gz.sha256
db/migrations/: 004_names_merge.sh  004a_capitalized_forms.sql  004b_import_names.sql  005_decompose_refs.sh  005a_decompose_single_refs.sql  005b_decompose_core_metadata.sql  005c_junction_tables.sql  005d_junction_sense_glosses.sql  006_force_patterns.sh  006a_force_infrastructure_tokens.sql  006b_sub_cat_patterns.sql  006c_verb_classification.sql  006d_rules_and_dimensions.sql  007_pbm_entity_infrastructure.sh  007a_namespace_allocations.sql  007b_pbm_structural_markers.sql  007c_entity_classification_tokens.sql  007d_create_pbm_database.sql  007e_create_entity_database.sql  007f_shard_registry.sql  008_missing_common_nouns.sql  009_position_storage.sql  010_var_database.sql  011_pbm_prefix_tree.sql  012_pbm_docvars.sql  013_position_tables.sql  014_source_records.sql  015_docvar_staging.sql  016_entity_lowercase.sql  016_lowercase_normalization.sql  023_variant_forms.sql  025_fix_envelope_queries.sql  026_label_tier_proper_common.sql  027_lowercase_proper_names.sql  028_collision_variants.sql  029_new_english_schema.sql  030_inflection_functions.sql  031_token_morph_rules.sql  032_envelope_queries_new_schema.sql  033_fix_envelope_lmdb_subdb.sql  (+21 more)
db/tools/: ascii_text.py  byte_codes.py  unicode_text.py
docs/: .~lock.ltwf-walk-coverage.md#  .~lock.outreach-drafts-2026-06-11.md#  README.md  TODO.md  affect-shape-force-library-2026-06-10.md  concept-explication-format.md  contributor-guide.md  core-primes-molecules-surface-forms-2026-06-09.md  data-pipeline-status-2026-04-07.md  db-uri-elements-spec.md  engine-quickref.md  envelope-vocab-spec.md  explication-format-test-report-2026-06-10.md  hcp-english-schema-design.md  kaikki-analysis.md  kaikki-curation-standards.md  kaikki-population-plan.md  kaikki-tag-mapping.md  l2-molecule-candidates.md  ladder-rings-1-3-results-2026-06-11.md  ltwf-walk-coverage.md  o3de_engine_architecture_research.md  outreach-drafts-2026-06-11.md  prefix-predictive-pipeline-design.md  project-update-2026-04-07.md  questions-for-db-specialist.md  roadmap.md  scene-pipeline-plan.md  sense-conversion-pilot-plan-2026-06-11.md  sense-conversion-pilot-results-2026-06-11.md  status.md  variant-forms-audit-2026-03-04.md  wiktionary-source-pipeline-2026-04-27.md
docs/00-orientation/: glossary.md  reading-order.md  what-is-napier.md
docs/01-foundations/: 01-inside-the-black-box.md  02-theory-of-mind-modelling-axiom.md  README.md  (+6 more)
hcp-engine/: AGENTS.md  CMakeLists.txt  ROADMAP.md  TODO.md  configure.sh  project.json  project.json.bak0
hcp-engine/Gem/Source/Forces/: CMakeLists.txt  ForceKernel.h  README.md  test_forces.cpp
hcp-engine/Gem/Source/Pack/: .gitignore  CMakeLists.txt  PackKernel.h  PackStore.h  README.md  pack_vocab.cpp  test_pack.cpp
hcp-engine/Gem/Source/Settle/: CMakeLists.txt  HCPSettleCompute.azsl  HCPSettleSrg.azsli  README.md  SettleKernel.h  build_spirv.sh  test_settle.cpp  validate_shader.sh  vk_settle_harness.cpp
prototypes/: memory_to_hcp.py
scripts/: TODO.md  bootstrap_numerals_full.py  bootstrap_numerals_test.py  build_phrase_components.py  compile_entity_lmdb.py  compile_vocab_lmdb.py  context_watcher.sh  create_github_issues.sh  create_multiword_entities.py  create_nf_other_entities.py  create_nf_people_entities.py  create_nf_place_entities.py  fix_numeral_references.py  hcp_client.py  ingest_texts.py  load_kaikki_fast.py  merge_frequency_ranks.py  migrate_to_proper_schema.py  mint_category_phrases.py  mint_multiword_ids.py  pass1_insert_roots.py  pass2_insert_token_pos.py  pass3_insert_glosses.py  pass6_insert_labels.py  phrase_resolve_tokenized.py  resolve_partial_phrases.py  resolve_relations.py  resolve_relations_pass2.py  self_tokenize.py  setup_kaikki_schema.py  split_entity_dbs.py  sweep_entity_glosses.py  verify_lmdb.py
sources/: README.md  fetch.sh
tests/: __init__.py  conftest.py  test_byte_codes.py  test_spacing.py  test_token_id.py
tools/: hcp.py  hcp_client.py
tools/byte-floor/: CMakeLists.txt  README.md  bf.cpp  bytefloor.cpp  bytefloor.h  test_bytefloor.cpp
work/: data.md  implementation-plan.md  pyproject.toml
work/godot/hcp/: project.godot
work/godot/hcp/core/: token_db.gd
work/hcp/: __main__.py
work/hcp/abstraction/: abstraction_meter.py  decomposer.py
work/hcp/api/: browser.py  cli.py  demo.py
work/hcp/assembly/: reconstructor.py  validator.py
work/hcp/atomizer/: byte_atomizer.py  covalent_tables.py  tokenizer.py
work/hcp/cognition/: context.py  ingest.py  test_full.py  test_ingest.py  test_pipeline.py
work/hcp/core/: byte_codes.py  nsm_primitives.py  pair_bond.py  token_id.py
work/hcp/di/: __init__.py  bootstrap.py  experience.py  memory.py  runtime.py  test_di.py
work/hcp/physics/: energy.py  engine.py  rigid_body.py  soft_body.py
work/hcp/physics/forces/: albedo.py  gravity.py
work/hcp/storage/: bond_store.py  schema.py  token_store.py
work/tests/: conftest.py  test_atomizer.py  test_core.py  test_forces.py  test_integration.py  test_physics.py  test_reconstructor.py
(+357 files in other folders)
